--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -9,4 +9,4 @@ eureka:
     register-with-eureka: true # Eureka server? ??
     fetch-registry: true # Eureka Server? ?? ?????? ??? ????? ??????? ???? ??
     service-url:
-      defaultZone: http://127.0.0.1:8761/eureka
+      defaultZone: http://127.0.0.1:8761/eureka # Eureka Server url ??
