--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -5,6 +5,8 @@ spring:
     name: user-service
 
 eureka:
+  instance:
+    instance-id: ${spring.cloud.client.hostname}:${spring.application.instance_id:${random.value}}
   client:
     register-with-eureka: true # Eureka server? ??
     fetch-registry: true # Eureka Server? ?? ?????? ??? ????? ??????? ???? ??
