--- a/apigateway-service/src/main/resources/application.yml
+++ b/apigateway-service/src/main/resources/application.yml
@@ -14,6 +14,12 @@ spring:
     discovery:
       enabled: false
     gateway:
+      default-filters:
+        - name: GlobalFilter
+          args:
+            baseMessage: Global Filter Base Message
+            preLogger: true
+            postLogger: true
       routes:
         - id: first-service
           uri: http://localhost:8081/
