--- a/apigateway-service/src/main/resources/application.yml
+++ b/apigateway-service/src/main/resources/application.yml
@@ -2,8 +2,8 @@ server:
   port: 8000
 eureka:
   client:
-    register-with-eureka: false
-    fetch-registry: false
+    fetch-registry: true
+    register-with-eureka: true
     service-url:
       defaultZone: http://localhost:8761/eureka
 
@@ -11,8 +11,8 @@ spring:
   application:
     name: apigateway-service
   cloud:
-    discovery:
-      enabled: false
+#    discovery:
+#      enabled: false
     gateway:
       default-filters:
         - name: GlobalFilter
@@ -22,7 +22,7 @@ spring:
             postLogger: true
       routes:
         - id: first-service
-          uri: http://localhost:8081/
+          uri: lb://FIRST-SERVICE
           predicates:
             - Path=/first-service/**
           filters:
@@ -30,7 +30,7 @@ spring:
             #            - AddRequestHeader=first-response, first-response-header2
             - CustomFilter
         - id: second-service
-          uri: http://localhost:8082/
+          uri: lb://SECOND-SERVICE
           predicates:
             - Path=/second-service/**
           filters:
