--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -3,6 +3,17 @@ server:
 spring:
   application:
     name: user-service
+  h2:
+    console:
+      enabled: true
+      settings:
+        web-allow-others: true
+      path: /h2-console
+  datasource:
+    url: jdbc:h2:tcp://localhost/~/msa-user
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
 
 eureka:
   instance:
