[Feat]: user-service > AuthenticationFilter.java successfulAuthentication Jwt 생성하여 header에 전달

--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -39,3 +39,7 @@ greeting:
 logging:
   level:
     com.example.userservice: DEBUG
+
+token:
+  expiration_time: 86400000
+  secret: R8n9rpDN1Q6LJgD2LIC0uqAZEFCiPKeBudPTU10cDPU=
