--- a/config-service/src/main/resources/application.yml
+++ b/config-service/src/main/resources/application.yml
@@ -4,9 +4,13 @@ server:
 spring:
   application:
     name: config-service
+  profiles:
+    active: native
   cloud:
     config:
       server:
+        native:
+          search-locations: file://${user.home}/Desktop/workspace/native-file-repo
         git:
           uri: https://github.com/DevK-Jung/spring-cloud-config.git
           username: ${gitUsername}
