--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -14,11 +14,11 @@ spring:
       settings:
         web-allow-others: true
       path: /h2-console
-  datasource:
-    url: jdbc:h2:tcp://localhost/~/msa-user
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+#  datasource:
+#    url: jdbc:h2:tcp://localhost/~/msa-user
+#    username: sa
+#    password:
+#    driver-class-name: org.h2.Driver
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
