--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -44,6 +44,8 @@ greeting:
 logging:
   level:
     com.example.userservice: DEBUG
+    com.example.userservice.client: DEBUG
+
 
 management:
   endpoints:
