--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
     implementation 'io.jsonwebtoken:jjwt:0.12.6'
 
+//    implementation "io.github.resilience4j:resilience4j-spring-boot3:2.3.0"
+    implementation "org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j"
+
     runtimeOnly 'com.h2database:h2'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
