[Feat]: UserService, OrderService ZipKin 추가
- TraceId가 User와 Order가 일치하지 않음 확인 필요

--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
     password: test1357
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
-#    database-platform: org.hibernate.dialect.H2Dialect
+    #    database-platform: org.hibernate.dialect.H2Dialect
     database-platform:
     hibernate:
       ddl-auto: update
@@ -29,7 +29,7 @@ spring:
       hibernate:
         show_sql: true
         format_sql: true
-#        dialect: org.hibernate.dialect.H2Dialect
+        #        dialect: org.hibernate.dialect.H2Dialect
         dialect: org.hibernate.dialect.MariaDBDialect
   sql:
     init:
@@ -48,3 +48,20 @@ eureka:
 logging:
   level:
     com.example.orderservice: debug
+  pattern:
+    correlation: '%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]'
+
+management:
+  tracing:
+    sampling:
+      probability: 1.0
+    propagation:
+      consume: b3
+      produce: b3
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
+  endpoints:
+    web:
+      exposure:
+        include: health, beans, refresh, bus-refresh # config service 정보 refresh
