--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -56,6 +56,11 @@ dependencies {
 //    implementation "io.github.resilience4j:resilience4j-spring-boot3:2.3.0"
     implementation "org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j"
 
+    implementation 'io.micrometer:micrometer-observation'
+    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
+    implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
+    implementation 'io.zipkin.brave:brave-instrumentation-spring-web'
+
     runtimeOnly 'com.h2database:h2'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
