--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -14,11 +14,11 @@ spring:
       settings:
         web-allow-others: true
       path: /h2-console
-#  datasource:
-#    url: jdbc:h2:tcp://localhost/~/msa-user
-#    username: sa
-#    password:
-#    driver-class-name: org.h2.Driver
+  #  datasource:
+  #    url: jdbc:h2:tcp://localhost/~/msa-user
+  #    username: sa
+  #    password:
+  #    driver-class-name: org.h2.Driver
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
@@ -45,9 +45,20 @@ logging:
   level:
     com.example.userservice: DEBUG
     com.example.userservice.client: DEBUG
+  pattern:
+    correlation: '%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]'
 
 
 management:
+  tracing:
+    sampling:
+      probability: 1.0
+    propagation:
+      consume: b3
+      produce: b3
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
   endpoints:
     web:
       exposure:
